-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 10
-
Component/s: security-libs
-
b20
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206780 | 12 | Martin Balao Alonso | P4 | Resolved | Fixed | team |
| JDK-8206557 | 11.0.1 | Martin Balao Alonso | P4 | Resolved | Fixed | b01 |
| JDK-8293610 | openjdk8u362 | Martin Balao Alonso | P4 | Resolved | Fixed | b01 |
| JDK-8358840 | shenandoah8u362 | Martin Balao Alonso | P4 | Resolved | Fixed | b01 |
| JDK-8358148 | 8u471 | Sean Coffey | P4 | Resolved | Fixed | b01 |
libsoftokn3 version = 3.341. ECC Basic.
----------System.err:(25/1658)----------
java.security.ProviderException: Could not initialize NSS
at jdk.crypto.cryptoki/sun.security.pkcs11.SunPKCS11.<init>(SunPKCS11.java:218)
at jdk.crypto.cryptoki/sun.security.pkcs11.SunPKCS11$1.run(SunPKCS11.java:113)
at jdk.crypto.cryptoki/sun.security.pkcs11.SunPKCS11$1.run(SunPKCS11.java:110)
at java.base/java.security.AccessController.doPrivileged(Native Method)
at jdk.crypto.cryptoki/sun.security.pkcs11.SunPKCS11.configure(SunPKCS11.java:110)
at PKCS11Test.getSunPKCS11(PKCS11Test.java:150)
at TestNssDbSqlite.initializeProvider(TestNssDbSqlite.java:119)
at TestNssDbSqlite.initialize(TestNssDbSqlite.java:110)
at TestNssDbSqlite.main(TestNssDbSqlite.java:67)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
at java.base/java.lang.Thread.run(Thread.java:844)
Caused by: java.io.IOException: NSS initialization failed
at jdk.crypto.cryptoki/sun.security.pkcs11.Secmod.initialize(Secmod.java:234)
at jdk.crypto.cryptoki/sun.security.pkcs11.SunPKCS11.<init>(SunPKCS11.java:213)
... 14 more
- backported by
-
JDK-8206557 sun/security/pkcs11/Secmod/TestNssDbSqlite.java failed with "NSS initialization failed" on NSS 3.34.1
-
- Resolved
-
-
JDK-8206780 sun/security/pkcs11/Secmod/TestNssDbSqlite.java failed with "NSS initialization failed" on NSS 3.34.1
-
- Resolved
-
-
JDK-8293610 sun/security/pkcs11/Secmod/TestNssDbSqlite.java failed with "NSS initialization failed" on NSS 3.34.1
-
- Resolved
-
-
JDK-8358148 sun/security/pkcs11/Secmod/TestNssDbSqlite.java failed with "NSS initialization failed" on NSS 3.34.1
-
- Resolved
-
-
JDK-8358840 sun/security/pkcs11/Secmod/TestNssDbSqlite.java failed with "NSS initialization failed" on NSS 3.34.1
-
- Resolved
-
- relates to
-
JDK-8292998 Clean Secmod temporary NSS DB directory before test execution
-
- In Progress
-
-
JDK-8165996 PKCS11 using NSS throws an error regarding secmod.db when NSS uses sqlite
-
- Resolved
-